--- a/css/style.css
+++ b/css/style.css
@@ -192,8 +192,9 @@ body{
 	box-shadow:  0px 1px 1px 0px #8F8F8F;
 }
 #timeline .post a.more:hover{
-	background-color: #F3EDED;
+	background-color: #F5F5F5;
 }
+
 #timeline .post a.share-trigger{
 	text-decoration: none;
 	font-size: 12px;
@@ -213,7 +214,7 @@ body{
 }
 #timeline .post a.share-trigger.over,
 #timeline .post a.share-trigger:hover{
-	background-color: #F3EDED;
+	background-color:  #F5F5F5;
 }
 #timeline .post .share{
 	position: relative;
